--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,4 @@ DB=postgres://USER:PASSWORD@localhost:PORT/DATABASE_NAME
 PORT=3000
 SECRET_ACCESS_TOKEN=SECRET_ACCESS_TOKEN
 SECRET_REFRESH_TOKEN=SECRET_REFRESH_TOKEN
+CLIENT_URL=http://localhost:5173
