--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "antd": "^5.24.3",
     "axios": "^1.8.3",
     "path": "^0.12.7",
     "react": "^19.0.0",
