--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.3",
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
