--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "url": "^0.11.4"
@@ -25,6 +27,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
